// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FormError snapshots with default props 1`] = `
<ContextProvider
  value={Object {}}
>
  <FormError>
    Text
  </FormError>
</ContextProvider>
`;

exports[`Component: FormError snapshots with error props 1`] = `
<ContextProvider
  value={Object {}}
>
  <FormError
    error="Error text"
  >
    Text
  </FormError>
</ContextProvider>
`;
